--- a/src/components/UI/buttons/buttonStyle.module.css
+++ b/src/components/UI/buttons/buttonStyle.module.css
@@ -8,12 +8,12 @@
     font-weight: 600;
 }
 
-.button-medium {
+.button_medium {
     padding: 0.75rem 1.25rem;
     font-size: 0.75rem;
 }
 
-.button-outline {
+.button_outline {
     color: #2DAFD8;
     border: 1px solid #2DAFD8; 
     border-radius: 0.75rem;
