--- a/src/components/UI/cards/trackCardStyle.module.css
+++ b/src/components/UI/cards/trackCardStyle.module.css
@@ -1,25 +1,28 @@
 .track_card_container {
-  background-color: #272b2c;
-  padding: 1rem 1rem 2rem;
   border-radius: 1rem;
+  position: relative;
 }
 
-.track_card_container:hover {
-    background-color: #3d4344;
-    transition: all 0.25s;
-  }
-
 .track_image {
-  border-radius: 1.5rem;
-  max-width: 100%;
+  border-radius: 1rem;
+  width: 100%;
+}
+
+.track_info {
+  position: absolute;
+  bottom: 0;
+  padding: 1.25rem 1rem;
+  width: 90%;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
 .track_name {
-  /* text-align: center; */
   color: white;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  margin-top: 1.125rem;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -28,7 +31,7 @@
 
 .track_artist {
   font-size: 1rem;
-  color: #7e8d91;
+  color: rgb(160, 160, 160);
   margin-top: 0.5rem;
   width: 100%;
   white-space: nowrap;
@@ -37,40 +40,42 @@
 }
 
 .track_button {
-    margin-top: 1.5rem;
-    width: 100%;
-    background-color: #272b2c; ;
-    padding: 0.75rem 1.25rem;
-    font-size: 0.75rem;
-    font-weight: 600;
-    color: #2DAFD8;
-    border: 1px solid #3d4344; 
-    border-radius: 0.75rem;
-    font-size: 1rem;
+  display: none;
+  background-color: #2dafd8;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+  border: 0;
 }
 
-.track_button:hover {
-    cursor: pointer;
-    background-color: #2DAFD8;
-    color: white;
-    border: 0;
-    transition: all 0.25s;
-}
-
-.track_button:active {
-    background-color: #1C86A8;
+.track_button img{
+  height: 1.25rem;
+  width: 1.25rem;
 }
 
 .track_button_selected {
-    background-color: #2DAFD8;
-    color: white;
-    border: none;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.75rem;
 }
 
-.track_button_selected:hover {
-  background-color: #1C86A8;
+.track_card_container:hover .track_button {
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.75rem;
 }
 
-.track_button_selected:active {
-  background-color: #1a6b86;
+.track_button:hover {
+  cursor: pointer;
+  background-color: #229ec4;
+  color: white;
+  transition: all 0.25s;
+}
+
+.track_button:active {
+  background-color: #1c86a8;
 }
